--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,5 @@
 
-<h1>about us</h1>
-<p>We are woking on our One Month Rails Pinteresting App</p>
+<div class="jumbotron">
+	<h1>about us</h1>
+	<p>We are woking on our One Month Rails Pinteresting App</p>
+</div>
