--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,4 +2,16 @@
 <div class="jumbotron">
 	<h1>about us</h1>
 	<p>We are woking on our One Month Rails Pinteresting App</p>
+	<div class="row">
+		<div class="col-sm-6 col-md-4">
+			<div class="thumbnail">
+				<img src="app/assets/images/GavinRea.jpg" alt="...">
+				<div class="caption">
+					<h3>Gavin Rea</h3>
+					<p>Gavin is a 20 year old living in Menlo Park, CA. He attends San Jose State taking classes in industrial design and illustration, and persues web development on the side. His next projects will be a photo/drawing blog and an online store for his dream ultralight gear company :)</p>
+					<p><a href="https://www.facebook.com/gavin.rea" class="btn btn-primary" role="button">Facebook</a> <a href="http://www.gavinrea.org/" class="btn btn-primary" role="button">Personal Website</a></p>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
