--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,20 @@
-<div class="jumbotron">
-<h1>Welcome to my app!</h1>
-<p>Click here to <%= link_to "Sign Up", "", class: "btn btn-primary btn-lg" %>
-</p>
+<div class="jumbotron center">
+	<h1>Welcome to my app!</h1>
+	<p>
+		<%= link_to "Log in", "#", class: "btn btn-default btn-lg" %>
+		<%= link_to "Sign up", "#", class: "btn btn-primary btn-lg" %>
+	</p>    
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-12 image1">
+				<img src="http://placekitten.com/700/300" alt="">
+			</div>
+			<div class="col-sm-12 image2">
+				<img src="http://placekitten.com/699/300" alt="">
+			</div>
+			<div class="col-sm-12 image3">
+				<img src="http://placekitten.com/701/300" alt="">
+			</div>
+		</div>
+	</div>
 </div>
