added js for ga button monitoring

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,14 @@
 <div class="jumbotron center">
 	<h1 class='bigtitle'>Welcome to my app!</h1>
+	
+	<% if user_signed_in? %>
+	<!-- diplay normal page stuff -->
 	<p>
 		<%= link_to "Log in", "#", class: "btn btn-default btn-lg" %>
 		<%= link_to "Sign up", "#", class: "btn btn-primary btn-lg" %>
 	</p>  
 	<div class = container>
-	<input type="text" class = 'userinputtext'>
+		<input type="text" class = 'userinputtext'>
 	</div>
 	<div class="container">
 		<div class="row">
@@ -22,12 +25,17 @@
 	</div>
 	<!-- here is html for buttons -->
 	<div class="container buttons center">
-      <div class="row ">
-        <div class="btn-group">
-          <button class="next btn btn-warning"> PREV </button>
-          <button class="reset btn btn-info"> RESET </button>
-          <button class="prev btn btn-success"> NEXT </button>
-        </div>
-      </div>
-    </div>
+		<div class="row ">
+			<div class="btn-group">
+				<button class="next btn btn-warning"> PREV </button>
+				<button class="reset btn btn-info"> RESET </button>
+				<button class="prev btn btn-success"> NEXT </button>
+			</div>
+		</div>
+	</div>
 </div>
+<% else %>
+<p>
+	<%= link_to "Log in", new_user_session_path, class: "btn btn-default btn-lg" %>
+	<%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+	
