--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,10 +16,25 @@
 	<div class="container">
 
 		<div class="row">
+			<!-- display all flash messages with class alert and alert name -->
+			<% flash.each do |name, msg| %>
+			<%= content_tag(:div, msg, class: "alert alert-#{name}") %>
+			<% end %>
 
 			<%= yield %>
 			
 		</div>
 	</div>
+	<!-- tag for google analytics -->
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-37775683-3', 'auto');
+		ga('send', 'pageview');
+
+	</script>
 </body>
 </html>
