implemented devise for users

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 
 <div class="jumbotron">
-	<h1>about us</h1>
+	<h1>About Us</h1>
 	<p>We are woking on our One Month Rails Pinteresting App</p>
 	<div class="row">
 		<div class="col-sm-6 col-md-4">
