--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,6 +18,13 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to 'home', root_path%></li>
         <li><%= link_to 'about', about_path%></li>
+        <!-- log out link must contain method b/c of how internet works -->
+        <% if user_signed_in? %>
+        <li><%= link_to 'sign out', destroy_user_session_path, method: :delete%></li>
+<% else %>
+        <li><%= link_to 'sign in', new_user_session_path%></li>
+
+        <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
