stuff from latest rails vids, added users controller, etc

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,15 +13,16 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    
-      
+
+
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to 'home', root_path%></li>
         <li><%= link_to 'about', about_path%></li>
         <!-- log out link must contain method b/c of how internet works -->
         <% if user_signed_in? %>
         <li><%= link_to 'sign out', destroy_user_session_path, method: :delete%></li>
-<% else %>
+        <li><%= link_to 'edit account', edit_user_registration_path %></li>
+        <% else %>
         <li><%= link_to 'sign in', new_user_session_path%></li>
 
         <% end %>
