cleaned up pins scaffold

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,12 @@
 <div class="jumbotron center">
 	<h1 class='bigtitle'>Welcome to my app!</h1>
 
+	<!-- here is the ajax example -->
+	<div id = "response"></div>
+	<button id= "call" class = "btn btn-lg btn-info" onclick="ajax()">CALL</button>
+	
+
+
 	<% if user_signed_in? %>
 	<!-- diplay normal page stuff --> 
 	<p>Welcome to the members area!</p>
@@ -38,3 +44,5 @@
 	</p>
 	<% end %>
 </div>
+
+er
