--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -1,21 +1,26 @@
-<%= form_for(@pin) do |f| %>
-  <% if @pin.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@pin.errors.count, "error") %> prohibited this pin from being saved:</h2>
+<!-- Display flash messages -->
+<%= form_for @pin, html: { multipart: true } do |f| %>
+<% if @pin.errors.any? %>
+<div id="error_explanation">
+  <h2><%= pluralize(@pin.errors.count, "error") %> prohibited this pin from being saved:</h2>
+  <ul>
+    <% @pin.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+    <% end %>
+  </ul>
+</div>
+<% end %>
 
-      <ul>
-      <% @pin.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field form-group">
-    <%= f.label :description %><br>
-    <%= f.text_field :description, class: "form-control"%>
-  </div>
-  <div class="actions form-group">
-    <%= f.submit class: "btn btn-primary"%>
-  </div>
+<!-- Actual form fields -->
+<div class="field form-group">
+  <%= f.label :image %><br>
+  <%= f.file_field :image, class: "form-control"%>
+</div>
+<div class="field form-group">
+  <%= f.label :description %><br>
+  <%= f.text_field :description, class: "form-control"%>
+</div>
+<div class="actions form-group">
+  <%= f.submit class: "btn btn-primary"%>
+</div>
 <% end %>
