--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,6 +20,7 @@
         <li><%= link_to 'about', about_path%></li>
         <!-- log out link must contain method b/c of how internet works -->
         <% if user_signed_in? %>
+        <li><%= link_to 'new pin', new_pin_path %></li>
         <li><%= link_to 'sign out', destroy_user_session_path, method: :delete%></li>
         <li><%= link_to 'edit account', edit_user_registration_path %></li>
         <% else %>
