--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,36 +1,21 @@
-<h1>Listing pins</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Image</th>
-      <th>Description</th>
-      <th>User ID</th>
-      <th colspan="3"></th> 
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @pins.each do |pin| %>
-    <tr>
-      <td><%= image_tag pin.image.url(:medium) %></td>
-      <td><%= pin.description %></td>
-      <td><%= pin.user.try(:email) %></td>      
+<!-- necessary for jquery masonry to recognize container -->
+<div id = "pins" class = "transitions-enabled">
+  <% @pins.each do |pin| %>
+  <div class = "box panel panel-defalut">
+    <%= image_tag pin.image.url(:medium) %>
+    <div class = "panel-body">
+      <%= pin.description %>
+      <%= pin.user.try(:email) %>      
       <!-- in this case, will go to pin show path by defalut -->
-      <td><%= link_to 'Show', pin %></td> 
+      <%= link_to 'Show', pin %> 
 
       <% if pin.user == current_user  %>
       <!-- otherwise, have to specify type of request and pass in pin for id -->
-      <td><%= link_to 'Edit', edit_pin_path(pin) %></td>
-      <td><%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <%= link_to 'Edit', edit_pin_path(pin) %>
+      <%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %>
       <% end %>
-      
-    </tr>
-    <% end %>
-  </tbody>
-</table>
+    </div>
+  </div>
+  <% end %>
+</div>
 
-<br>
-<% if user_signed_in? %>
-<%= link_to 'New Pin', new_pin_path %>
-<% end %>
